--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title>EdgeLedger Financial | Accounting & Investment</title>
 </head>
 
@@ -112,7 +111,7 @@
         <div class="contact-form bg-primary p-2">
             <h2 class="m-heading">Contact Us</h2>
             <p>Please use the form below to contact us</p>
-            <form action="success.html" name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+            <form action="success.html" name="contact" method="POST" data-netlify="true">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name" placeholder="Enter Name">
@@ -129,10 +128,7 @@
                     <label for="message">Message</label>
                     <textarea name="message" id="message" placeholder="Enter Message"></textarea>
                 </div>
-                <div class="g-recaptcha" data-sitekey="your_site_key"></div>
-                <br />
-                <input type="submit" value="send" class="btn btn-dark">
-                <!-- <input type="submit" value="Send" class="btn btn-dark"> -->
+                <input type="submit" value="Send" class="btn btn-dark">
             </form>
         </div>
         <div class="map"></div>
@@ -157,10 +153,6 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPbyJsjKRV1KfUN-v0zY0eJ2QoTd_QsIs&callback=initMap"
         async defer></script>
-    <!-- Captcha -->
-
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer>
-    </script>
 
 </body>
 
